huge restruct., fixes and cleanup of the View part of the code